--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,15 @@ Thumbs.db
 # Files that might appear on external disks
 .Spotlight-V100
 .Trashes
+
+# Project's Bundle configuration
+.bundle/
+
+# Project's gems
+vendor/bundle
+
+# Sublime project workspace 
+*.sublime-workspace
+
+# Sass cache
+.sass-cache
